updated entry point name

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,4 +11,4 @@ url =
 packages = find:
 
 [options.entry_points]
-console_scripts = abc = preventfilecontent.main:main
+console_scripts = prevent-file-content = preventfilecontent.main:main
